added import os to create_pinecone_vectostore to fix depency issues

--- a/cisco_qa_tool_notebook.ipynb
+++ b/cisco_qa_tool_notebook.ipynb
@@ -915,6 +915,7 @@
     "    \"\"\"\n",
     "        \n",
     "    import pinecone\n",
+    "    import os\n",
     "    from langchain.vectorstores import Pinecone\n",
     "    from langchain.embeddings import OpenAIEmbeddings\n",
     "    \n",
