turned on verbose=True

--- a/cisco_qa_tool_notebook.ipynb
+++ b/cisco_qa_tool_notebook.ipynb
@@ -1625,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "id": "d4014363-bd44-4bbe-af80-9da1d69b62bd",
    "metadata": {},
    "outputs": [],
@@ -1635,9 +1635,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "id": "dd7d1fc0-0ed3-4864-9c94-5fbc373049f1",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -1646,10 +1650,10 @@
      "output_type": "stream",
      "text": [
       "10 useful links found.\n",
-      "7 new URLs detected\n",
+      "4 new URLs detected\n",
       "0 new document(s) not found in database.\n",
       "No new docs to add\n",
-      "The Cisco 2500 Series Wireless Controller supports a maximum of 50 lightweight APs in increments of 5 AP licenses with a minimum of a 5 AP license.\n",
+      "The Cisco 2500 Series Wireless Controller supports a maximum of 50 lightweight APs.\n",
       "\n",
       "\n",
       "Sources:\n",
@@ -1880,7 +1884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 71,
    "id": "21a9175c-f1cd-4d5c-b89d-8cb6baf346ad",
    "metadata": {},
    "outputs": [],
@@ -1898,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 72,
    "id": "490f778b-e42c-4075-b2e1-cd40f41c5d9a",
    "metadata": {},
    "outputs": [],
@@ -1908,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 73,
    "id": "e4142e25-ebc2-4b74-bbeb-a695d1a72a25",
    "metadata": {
     "tags": []
@@ -1922,7 +1926,7 @@
       "5 new URLs detected\n",
       "0 new document(s) not found in database.\n",
       "No new docs to add\n",
-      "The Cisco Catalyst 9400 Series can endure temperatures ranging from 23°F to 113°F (-5°C to +45°C) in normal operating conditions. In short-term exceptional conditions, it can endure temperatures ranging from 23°F to 131°F (-5°C to +55°C).\n",
+      "The Cisco Catalyst 9400 can endure temperatures ranging from 23°F to 113°F (-5°C to +45°C) in normal operating conditions. In short-term exceptional conditions, it can endure temperatures ranging from 23°F to 131°F (-5°C to +55°C).\n",
       "\n",
       "\n",
       "Sources:\n",
