--- a/cisco_qa_tool_notebook.ipynb
+++ b/cisco_qa_tool_notebook.ipynb
@@ -544,6 +544,7 @@
     "            pdf.write(response.content)\n",
     "            pdf_doc = load_pdf_as_doc(html_path, temp_file_path, pdf_filename)\n",
     "            \n",
+    "            \n",
     "    \n",
     "        if verbose:\n",
     "            print(f\"{temp_file_path} written to disk\")\n",
@@ -553,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 72,
    "id": "2bd5b5c2-85c7-416c-b4a3-129f7c3ffccd",
    "metadata": {},
    "outputs": [
@@ -561,17 +562,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/var/folders/lp/jgdr2r255gz098q__v2pjv0r0000gn/T/tmp57xqwvof/datasheet-c78-734981.pdf written to disk\n"
+      "/var/folders/lp/jgdr2r255gz098q__v2pjv0r0000gn/T/tmphjhlry_w/n1000_datasheet.pdf written to disk\n"
      ]
     }
    ],
    "source": [
-    "pdf_doc = download_pdf_and_return_doc(\"https://www.cisco.com/c/en/us/products/collateral/routers/829-industrial-router/datasheet-c78-734981.pdf\", f\"datasheet-c78-734981.pdf\", verbose=True)"
+    "pdf_doc = download_pdf_and_return_doc(\"https://www.cisco.com/c/dam/global/en_sg/training-events/datacentertechbyte/assets/pdfs/n1000_datasheet.pdf\", f\"n1000_datasheet.pdf\", verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 73,
    "id": "115740fe-9a5d-4158-b522-b8e6f6938e80",
    "metadata": {},
    "outputs": [
@@ -581,13 +582,34 @@
        "langchain.schema.document.Document"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "type(pdf_doc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "b64119a7-d5f2-4a09-9895-26f2eee7ea4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Document(page_content=' \\n Data Sheet \\n© 2008 Cisco Systems, Inc. All rights reserved. This document is Cisco Public Information. Page 1 of 7Cisco Nexus 1000V Virtual Switch \\nProduct Overview \\nThe Cisco Nexus™ 1000V virtual machine access switch is an intelligent software switch \\nimplementation for VMware ESX environments. R unning inside of the VMware ESX hypervisor, the \\nCisco Nexus 1000V supports Cisco® VN-Link server virtualization technology, providing  \\n● Policy-based virtual machine (VM) connectivity \\n● Mobile VM security and network policy, and  \\n● Non-disruptive operational model for your se rver virtualization, and networking teams.  \\nWhen server virtualization is deployed in the data center, virtual servers typically are not managed \\nthe same way as physical servers. Server virtualization is treated as a special deployment, leading \\nto longer deployment time with a greater degree of coordination among server, network, storage, \\nand security administrators. But with the Cisco Nexus 1000V you can have a consistent networking feature set and provisioning process all the way fr om the VM to the access, aggregation, and core \\nswitches. Your virtual servers can use the same net work configuration, security policy, tools, and \\noperational models as physical servers. Virtua lization administrators can leverage predefined \\nnetwork policy that follows the nomadic VM and fo cus on virtual machine administration.  This \\ncomprehensive set of capabilities helps you to deplo y server virtualization faster and realize its \\nbenefits sooner. \\nDeveloped in close collaboration with VMware, the Cisco Nexus 1000V is fully integrated with \\nVMware Virtual Infrastructure, in cluding VMware Virtual Center, VMware ESX, and ESXi. You can \\nuse the Cisco Nexus 1000V to manage your VM connecti vity with confidence in the integrity of the \\nserver virtualization infrastructure. \\nProduct Architecture \\nThe Cisco Nexus 1000V switch has two major compon ents, the Virtual Ether net Module (VEM) that \\nexecutes inside the hypervisor and the external Virtual Supervisor Module (VSM) that manages the \\nVEMs (Figure 1). ', metadata={'source': 'https://www.cisco.com/c/dam/global/en_sg/training-events/datacentertechbyte/assets/pdfs/n1000_datasheet.pdf', 'page': 1, 'filename': 'n1000_datasheet.pdf'})"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pdf_doc[0]"
    ]
   },
   {
@@ -759,6 +781,7 @@
     "            except Exception as e:\n",
     "                #print(e)\n",
     "                if verbose:\n",
+    "                    print(e)\n",
     "                    print(f\"Error occurred: {link} not available as PDF file.\")\n",
     "            #     # Cleanup step removing PDF file after being loaded as it isn't needed anymore\n",
     "            # if os.path.exists(pdf_local_path):\n",
