fixed saving pdfs to local path bug

--- a/cisco_qa_tool_notebook.ipynb
+++ b/cisco_qa_tool_notebook.ipynb
@@ -779,7 +779,7 @@
     "                print(f\"File {pdf_name} downloaded and successfully loaded.\")\n",
     "\n",
     "            except Exception as e:\n",
-    "                #print(e)\n",
+    "                print(f\"Error occurred: {link} not available as PDF file.\")\n",
     "                if verbose:\n",
     "                    print(e)\n",
     "                    print(f\"Error occurred: {link} not available as PDF file.\")\n",
