Paired with percent script

--- a/cisco_qa_tool_notebook.ipynb
+++ b/cisco_qa_tool_notebook.ipynb
@@ -605,7 +605,13 @@
    "cell_type": "code",
    "execution_count": 102,
    "id": "115740fe-9a5d-4158-b522-b8e6f6938e80",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -633,7 +639,13 @@
    "cell_type": "code",
    "execution_count": 103,
    "id": "b64119a7-d5f2-4a09-9895-26f2eee7ea4a",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -3201,6 +3213,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,auto:percent"
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
