--- a/cisco_qa_tool_notebook.ipynb
+++ b/cisco_qa_tool_notebook.ipynb
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "cb5f1e4b-a767-434b-b61d-0defb25291e9",
    "metadata": {},
    "outputs": [],
@@ -1591,7 +1591,7 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,auto:percent"
+   "formats": "ipynb,py:percent"
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
