Deleted unncessary files, updated .gitignore, and moved files to better directories

--- a/cisco_qa_tool_notebook.ipynb
+++ b/cisco_qa_tool_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e1629a30-1399-434c-a231-92468edee41b",
    "metadata": {},
    "outputs": [],
@@ -18,20 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fae6c604-2567-4430-b13d-66d115b7066c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'load_dotenv' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m load_dotenv(find_dotenv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../.env\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'load_dotenv' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c5c6b851-a11c-4f77-a42b-6ca42164bda3",
    "metadata": {},
    "outputs": [],
@@ -793,7 +792,19 @@
    "execution_count": null,
    "id": "d98b953c-355d-4896-85bc-3d9edfa8c7b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'return_pinecone_vectorstore' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m index_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcisco-knowledgebase\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m vectordb_pinecone \u001b[38;5;241m=\u001b[39m return_pinecone_vectorstore(index_name)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'return_pinecone_vectorstore' is not defined"
+     ]
+    }
+   ],
    "source": [
     "index_name = \"cisco-knowledgebase\"\n",
     "vectordb_pinecone = return_pinecone_vectorstore(index_name)"
